2008-06-27  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Initial theme code for app menu item borowed from button
	* ApplicationMenuItem.cs: Size alloc, size request, drawing
	* ApplicationMenu.cs: Bug fix in size alloc

2008-06-26  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Autohide the app menu when required

2008-06-26  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Updated for new app menu API
	* ApplicationMenuItem.cs, ApplicationMenu.cs: Major refactoring
	* ApplicationButton.cs: Update for new App menu API

2008-06-26  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Compilation bug fixes, sorry

2008-06-26  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Dummy renderer for App menu and app menu item
	* ApplicationMenu.cs: More work on app menu item

2008-06-25  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationButton.cs: Bugfixes for popup position, and misc other bug
	  fixes

2008-06-24  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Implementation of SizeAllocated for app menu, and more
	  work on SizeRequest

2008-06-24  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Size requisition for app menu

2008-06-24  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Fix background theme for Quick Access Toolbar when there is no
	  app button

2008-06-23  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Quick Access Toolbar background
	* ApplicationMenu.cs: Initial stub API for application menu.
	* QuickAccessToolbar.cs: Take care of height requests from children widgets

2008-06-22  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Title bar's background is not compliant
	* Ribbon.cs: Fix title bar layout code

2008-06-22  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Implementation of the required drop shadow for the app button

2008-06-22  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Change background color depending on current state