@@ -5,8 +5,11 @@ using Cairo;
 
 namespace Ribbons
 {
-	public class ApplicationMenu
+	public class ApplicationMenu : Container
 	{
+		private static int borderWidth = 2;
+		private static int space = 2;
+		
 		protected Theme theme = new Theme ();
 		
 		private List<ApplicationMenuItem> items;
@@ -15,6 +18,13 @@ namespace Ribbons
 		
 		private Button optionsBtn, exitBtn;
 		private Widget activeMenu;
+		
+		private int menuItemsColWidth;
+		private int buttonsHeight;
+		private int exitBtnWidth, optionsBtnWidth;
+		private int visibleMenuItems;
+		private bool activeMenuVisible;
+		private bool optionsBtnVisible, exitBtnVisible;
 		
 		private Window win;
 		
@@ -59,8 +69,23 @@ namespace Ribbons
 			}
 		}
 		
+		/// <summary>Returns the number of children.</summary>
+		public int NChildren
+		{
+			get { return items.Count; }
+		}
+		
+		/// <summary>Default constructor.</summary>
 		public ApplicationMenu ()
 		{
+			this.SetFlag (WidgetFlags.NoWindow);
+			
+			this.AddEvents ((int)(Gdk.EventMask.ButtonPressMask | Gdk.EventMask.ButtonReleaseMask | Gdk.EventMask.PointerMotionMask));
+			
+			//this.children = new List<Widget> ();
+			
+			//Append (new Button ("OK"));
+			
 			items = new List<ApplicationMenuItem> ();
 			itemHeight = 32;
 		}
@@ -77,6 +102,7 @@ namespace Ribbons
 		
 		public void Insert (ApplicationMenuItem i, int ItemIndex)
 		{
+			i.Parent = this;
 			i.Visible = true;
 			
 			if(ItemIndex == -1)
@@ -87,25 +113,36 @@ namespace Ribbons
 		
 		public void Remove (int ItemIndex)
 		{
-			if(ItemIndex == -1)
-				items.RemoveAt (items.Count - 1);
+			if(ItemIndex == -1) ItemIndex = items.Count - 1;
+			
+			items[ItemIndex].Unparent ();
+			items.RemoveAt (ItemIndex);
+		}
+		
+		public void ActivateMenu (Widget w)
+		{
+			if(w == null)
+				activeMenu = defaultMenu;
 			else
-				items.RemoveAt (ItemIndex);
+				activeMenu = w;
+			
+			QueueResize ();
 		}
 		
 		public void ShowAt (int x, int y)
 		{
 			if(win != null) KillMenu (true);
 			
-			win = new Window (this);
+			win = new SyntheticWindow (WindowType.Popup);
+			win.Child = this;
 			
 			win.Hidden += delegate { KillMenu (true); };
 			
-			win.Show ();
+			win.ShowAll ();
 			win.GdkWindow.Move (x, y);
 			
 			win.ButtonPressEvent += delegate { KillMenu (true); };
-			win.AddEvents ((int)Gdk.EventMask.ButtonPressMask);
+			win.AddEvents ((int)(Gdk.EventMask.ButtonPressMask | Gdk.EventMask.ButtonReleaseMask | Gdk.EventMask.PointerMotionMask));
 			
 			Grab.Add (win);
 			Gdk.GrabStatus grabbed = Gdk.Pointer.Grab (win.GdkWindow, true, Gdk.EventMask.ButtonPressMask, null, null, 0);
@@ -130,10 +167,8 @@ namespace Ribbons
 			Window win = this.win;
 			this.win = null;
 			
-			foreach(ApplicationMenuItem item in items)
-			{
-				item.Unparent ();
-			}
+			this.Child = null;
+			this.Unparent ();
 			
 			Grab.Remove (win);
 			if(Ungrab)
@@ -145,238 +180,191 @@ namespace Ribbons
 			win.Destroy ();
 		}
 		
-		internal class Window : SyntheticWindow
+		protected override void ForAll (bool include_internals, Callback callback)
 		{
-			private static int borderWidth = 2;
-			private static int space = 2;
-			
-			private ApplicationMenu parent;
-			
-			private int menuItemsColWidth;
-			private int buttonsHeight;
-			private int exitBtnWidth, optionsBtnWidth;
-			private int visibleMenuItems;
-			private bool activeMenuVisible;
-			private bool optionsBtnVisible, exitBtnVisible;
-			
-			public Window (ApplicationMenu Parent) : base (Gtk.WindowType.Popup)
+			foreach(Widget w in items)
 			{
-				parent = Parent;
-				
-				foreach(ApplicationMenuItem mi in parent.items)
+				if(w.Visible) callback (w);
+			}
+			
+			if(optionsBtn != null && optionsBtnVisible)
+			{
+				callback (optionsBtn);
+			}
+			
+			if(exitBtn != null && exitBtnVisible)
+			{
+				callback (exitBtn);
+			}
+			
+			if(activeMenu != null && activeMenuVisible)
+			{
+				callback (activeMenu);
+			}
+		}
+		
+		protected override void OnSizeRequested (ref Requisition requisition)
+		{
+			base.OnSizeRequested (ref requisition);
+			
+			menuItemsColWidth = 0;
+			int menuItemsColHeight = 0;
+			
+			foreach(ApplicationMenuItem mi in items)
+			{
+				if(mi.Visible)
 				{
-					mi.Parent = this;
-					mi.Show ();
+					mi.HeightRequest = itemHeight;
+					Gtk.Requisition req = mi.SizeRequest ();
+					if(req.Width > menuItemsColWidth) menuItemsColWidth = req.Width;
+					menuItemsColHeight += itemHeight;
 				}
 			}
 			
-			public void ActivateMenu (Widget w)
+			Console.WriteLine ("> " + menuItemsColHeight +" " + menuItemsColWidth);
+			
+			requisition.Height = menuItemsColHeight;
+			requisition.Width = menuItemsColWidth;
+			
+			if(activeMenu != null)
 			{
-				if(w == null)
-					parent.activeMenu = parent.defaultMenu;
-				else
-					parent.activeMenu = w;
-				
-				QueueResize ();
+				Gtk.Requisition req = activeMenu.SizeRequest ();
+				requisition.Width += req.Width;
+				if(req.Height > requisition.Height) requisition.Height = req.Height;
 			}
 			
-			protected override void ForAll (bool include_internals, Callback callback)
+			int buttonsWidth = 0;
+			buttonsHeight = 0;
+			
+			if(optionsBtn != null)
 			{
-				List<ApplicationMenuItem> items = parent.items;
-				
-				for(int i = 0, i_ub = visibleMenuItems ; i < i_ub ; ++i)
-				{
-					Widget w = items[i];
-					if(w.Visible) callback (w);
-				}
-				
-				if(parent.optionsBtn != null && optionsBtnVisible)
-				{
-					callback (parent.optionsBtn);
-				}
-				
-				if(parent.exitBtn != null && exitBtnVisible)
-				{
-					callback (parent.exitBtn);
-				}
-				
-				if(parent.activeMenu != null && activeMenuVisible)
-				{
-					callback (parent.activeMenu);
-				}
+				Gtk.Requisition req = optionsBtn.SizeRequest ();
+				buttonsWidth = req.Width;
+				buttonsHeight = req.Height;
+				optionsBtnWidth = req.Width;
 			}
 			
-			protected override void OnSizeRequested (ref Requisition requisition)
+			if(exitBtn != null)
 			{
-				base.OnSizeRequested (ref requisition);
-				
-				List<ApplicationMenuItem> items = parent.items;
-				int itemHeight = parent.itemHeight;
-				
-				menuItemsColWidth = 0;
-				int menuItemsColHeight = 0;
-				
-				foreach(ApplicationMenuItem mi in items)
-				{
-					if(mi.Visible)
-					{
-						mi.HeightRequest = itemHeight;
-						Gtk.Requisition req = mi.SizeRequest ();
-						if(req.Width > menuItemsColWidth) menuItemsColWidth = req.Width;
-						menuItemsColHeight += itemHeight;
-					}
-				}
-				
-				Console.WriteLine ("> " + menuItemsColHeight +" " + menuItemsColWidth);
-				
-				requisition.Height = menuItemsColHeight;
-				requisition.Width = menuItemsColWidth;
-				
-				if(parent.activeMenu != null)
-				{
-					Gtk.Requisition req = parent.activeMenu.SizeRequest ();
-					requisition.Width += req.Width;
-					if(req.Height > requisition.Height) requisition.Height = req.Height;
-				}
-				
-				int buttonsWidth = 0;
-				buttonsHeight = 0;
-				
-				if(parent.optionsBtn != null)
-				{
-					Gtk.Requisition req = parent.optionsBtn.SizeRequest ();
-					buttonsWidth = req.Width;
-					buttonsHeight = req.Height;
-					optionsBtnWidth = req.Width;
-				}
-				
-				if(parent.exitBtn != null)
-				{
-					Gtk.Requisition req = parent.exitBtn.SizeRequest ();
-					buttonsWidth = req.Width;
-					if(parent.optionsBtn != null) buttonsWidth += space;
-					if(req.Height > buttonsHeight) buttonsHeight = req.Height;
-					exitBtnWidth = req.Width;
-				}
-				
-				if(buttonsHeight > 0) buttonsHeight += space;
-				if(buttonsWidth > requisition.Width) requisition.Width = buttonsWidth;
-				
-				requisition.Width += borderWidth << 1;
-				requisition.Height += borderWidth << 1;
-				
-				Console.WriteLine (requisition.Height + " " + requisition.Width);
-				
-				this.menuItemsColWidth = menuItemsColWidth;
+				Gtk.Requisition req = exitBtn.SizeRequest ();
+				buttonsWidth = req.Width;
+				if(optionsBtn != null) buttonsWidth += space;
+				if(req.Height > buttonsHeight) buttonsHeight = req.Height;
+				exitBtnWidth = req.Width;
 			}
 			
-			protected override void OnSizeAllocated (Gdk.Rectangle allocation)
+			if(buttonsHeight > 0) buttonsHeight += space;
+			if(buttonsWidth > requisition.Width) requisition.Width = buttonsWidth;
+			
+			requisition.Width += borderWidth << 1;
+			requisition.Height += borderWidth << 1;
+			
+			Console.WriteLine (requisition.Height + " " + requisition.Width);
+			
+			this.menuItemsColWidth = menuItemsColWidth;
+		}
+		
+		protected override void OnSizeAllocated (Gdk.Rectangle allocation)
+		{
+			base.OnSizeAllocated (allocation);
+			
+			visibleMenuItems = 0;
+			
+			allocation.Height -= borderWidth;
+			
+			if(buttonsHeight + borderWidth <= allocation.Height)
 			{
-				base.OnSizeAllocated (allocation);
+				Gdk.Rectangle alloc;
 				
-				List<ApplicationMenuItem> items = parent.items;
-				int itemHeight = parent.itemHeight;
-				
-				visibleMenuItems = 0;
-				
-				allocation.Height -= borderWidth;
-				
-				if(buttonsHeight + borderWidth <= allocation.Height)
+				if(buttonsHeight > 0)
 				{
-					Gdk.Rectangle alloc;
+					alloc.X = allocation.Right - borderWidth;
+					alloc.Y = allocation.Bottom - borderWidth - buttonsHeight;
+					alloc.Height = buttonsHeight;
 					
-					if(buttonsHeight > 0)
+					if(exitBtn != null)
 					{
-						alloc.X = allocation.Right - borderWidth;
-						alloc.Y = allocation.Bottom - borderWidth - buttonsHeight;
-						alloc.Height = buttonsHeight;
-						
-						if(parent.exitBtn != null)
+						alloc.X -= exitBtnWidth;
+						alloc.Width = exitBtnWidth;
+						if(alloc.X >= allocation.X + borderWidth)
 						{
-							alloc.X -= exitBtnWidth;
-							alloc.Width = exitBtnWidth;
-							if(alloc.X >= allocation.X + borderWidth)
-							{
-								parent.exitBtn.SizeAllocate (alloc);
-							}
+							exitBtn.SizeAllocate (alloc);
 						}
-						
-						if(parent.optionsBtn != null)
-						{
-							if(parent.exitBtn != null) alloc.X -= space;
-							alloc.X -= optionsBtnWidth;
-							alloc.Width = optionsBtnWidth;
-							if(alloc.X >= allocation.X + borderWidth)
-							{
-								parent.exitBtn.SizeAllocate (alloc);
-							}
-						}
-						
-						allocation.Height -= buttonsHeight + space;
 					}
 					
-					alloc.X = allocation.X + borderWidth;
-					alloc.Y = allocation.Y + borderWidth;
-					alloc.Height = itemHeight;
-					if(allocation.Right - alloc.X - borderWidth < menuItemsColWidth)
+					if(optionsBtn != null)
 					{
-						menuItemsColWidth = allocation.Right - alloc.X - borderWidth;
+						if(exitBtn != null) alloc.X -= space;
+						alloc.X -= optionsBtnWidth;
+						alloc.Width = optionsBtnWidth;
+						if(alloc.X >= allocation.X + borderWidth)
+						{
+							exitBtn.SizeAllocate (alloc);
+						}
 					}
+					
+					allocation.Height -= buttonsHeight + space;
+				}
+				
+				alloc.X = allocation.X + borderWidth;
+				alloc.Y = allocation.Y + borderWidth;
+				alloc.Height = itemHeight;
+				if(allocation.Right - alloc.X - borderWidth < menuItemsColWidth)
+				{
+					menuItemsColWidth = allocation.Right - alloc.X - borderWidth;
+				}
 
-					if(menuItemsColWidth > 0)
-					{
-						alloc.Width = menuItemsColWidth;
-						
-						foreach(ApplicationMenuItem mi in items)
-						{
-							if(mi.Visible)
-							{Console.WriteLine ("$" + alloc.Bottom + " " + allocation.Bottom);
-								if(alloc.Bottom <= allocation.Bottom)
-								{
-									mi.SizeAllocate (alloc);
-									alloc.Y += itemHeight;
-									++visibleMenuItems;
-								}
-							}
-						}
-					}
+				if(menuItemsColWidth > 0)
+				{
+					alloc.Width = menuItemsColWidth;
 					
-					if(parent.activeMenu != null)
+					foreach(ApplicationMenuItem mi in items)
 					{
-						alloc.X = allocation.X + borderWidth + menuItemsColWidth + space;
-						alloc.Width = allocation.Right - alloc.X - borderWidth;
-						alloc.Y = allocation.Y + borderWidth;
-						alloc.Height = allocation.Bottom - alloc.Y - borderWidth;
-						
-						if(alloc.Width > 0 && alloc.Width > 0)
-						{
-							parent.activeMenu.SizeAllocate (alloc);
+						if(mi.Visible)
+						{Console.WriteLine ("$" + alloc.X + " " + alloc.Y + " " + alloc.Width + " " + alloc.Height);
+							if(alloc.Bottom <= allocation.Bottom)
+							{
+								mi.SizeAllocate (alloc);
+								alloc.Y += itemHeight;
+								++visibleMenuItems;
+							}
 						}
 					}
 				}
 				
-				Console.WriteLine ("Visible items: " + visibleMenuItems);
+				if(activeMenu != null)
+				{
+					alloc.X = allocation.X + borderWidth + menuItemsColWidth + space;
+					alloc.Width = allocation.Right - alloc.X - borderWidth;
+					alloc.Y = allocation.Y + borderWidth;
+					alloc.Height = allocation.Bottom - alloc.Y - borderWidth;
+					
+					if(alloc.Width > 0 && alloc.Width > 0)
+					{
+						activeMenu.SizeAllocate (alloc);
+					}
+				}
 			}
+		}
+		
+		protected override bool OnExposeEvent (Gdk.EventExpose evnt)
+		{
+			Context cr = Gdk.CairoHelper.Create (this.GdkWindow);
 			
-			protected override bool OnExposeEvent (Gdk.EventExpose evnt)
-			{
-				Context cr = Gdk.CairoHelper.Create (this.GdkWindow);
-				
-				cr.Rectangle (evnt.Area.X, evnt.Area.Y, evnt.Area.Width, evnt.Area.Height);
-				cr.Clip ();
-				Draw (cr);
-				
-				((IDisposable)cr.Target).Dispose ();
-				((IDisposable)cr).Dispose ();
-				
-				return base.OnExposeEvent (evnt);
-			}
+			cr.Rectangle (evnt.Area.X, evnt.Area.Y, evnt.Area.Width, evnt.Area.Height);
+			cr.Clip ();
+			Draw (cr);
 			
-			protected void Draw (Context cr)
-			{
-				Rectangle rect = new Rectangle (Allocation.X, Allocation.Y, Allocation.Width, Allocation.Height);
-				parent.theme.DrawApplicationMenu (cr, rect, parent, this);
-			}
+			((IDisposable)cr.Target).Dispose ();
+			((IDisposable)cr).Dispose ();
+			
+			return base.OnExposeEvent (evnt);
+		}
+		
+		protected void Draw (Context cr)
+		{
+			Rectangle rect = new Rectangle (Allocation.X, Allocation.Y, Allocation.Width, Allocation.Height);
+			theme.DrawApplicationMenu (cr, rect, this);
 		}
 	}
 }
